--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   },
   "dependencies": {
     "gatsby": "^5.3.3",
+    "gatsby-plugin-robots-txt": "^1.8.0",
+    "install": "^0.13.0",
+    "npm": "^9.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0"
