--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   },
   "dependencies": {
     "gatsby": "^5.3.3",
+    "gatsby-plugin-image": "^3.4.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
+    "gatsby-plugin-sharp": "^5.4.0",
     "gatsby-plugin-sitemap": "^6.4.0",
+    "gatsby-source-filesystem": "^5.4.0",
     "install": "^0.13.0",
     "npm": "^9.3.0",
     "react": "^18.2.0",
